# ai-ppt-maker

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PRD.md  README.md  docker-compose.yml  install.bat
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.workflow/: ai-ppt-maker.yml  master-pipeline.yml
.workflow.disabled/: README.md  branch-pipeline.yml  master-pipeline.yml  pr-pipeline.yml
assets/: _make_icon.py
backend/: Dockerfile  launcher.py  pyproject.toml  roadmap.yaml
backend/app/: __init__.py  config.py  logging_setup.py  main.py  ollama_health.py
backend/app/api/: debug.py  generate.py  jobs.py  outline.py  roadmap.py  templates.py  upload.py
backend/app/jobs/: queue.py
backend/app/outline/: __init__.py  classify_fallback.py  classify_prompts.py  fallback.py  llm_client.py  prompts.py  repair.py  summarizer.py
backend/app/render/: __init__.py  pptx_renderer.py
backend/app/schemas/: __init__.py  classify.py  outline.py  roadmap.py  template.py
backend/templates/: _make_masters.py  _make_thumbnails.py
backend/templates/executive-dark/: layout-mapping.yaml  master.pptx
backend/templates/minimal-light/: layout-mapping.yaml  master.pptx
backend/templates/tech-blue/: layout-mapping.yaml  master.pptx
backend/tests/: conftest.py
backend/tests/integration/: test_debug_api.py  test_generate_api.py  test_outline_api.py  test_roadmap_api.py  test_upload_api.py
backend/tests/unit/: test_fallback.py  test_health.py  test_logging_setup.py  test_ollama_health.py  test_outline_schema.py  test_pptx_renderer.py  test_repair.py  test_templates.py
docs/: architecture.md
docs/design-refs/: README.md  executive-dark.md  minimal-light.md  tech-blue.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css
frontend/src/api/: client.ts
frontend/src/components/: DebugDrawer.vue  OutlineForm.vue  RoadmapView.vue  TemplatePicker.vue
frontend/tests/: OutlineForm.test.ts  TemplatePicker.test.ts  parseTableInput.test.ts
scripts/: _common.bat  _ui.sh  ai-ppt-maker.spec  build_release.sh  build_scripts.py  check_spec_paths.py  cleanup.bat  cleanup.bat.tmpl  cleanup.sh  deploy.bat  deploy.bat.tmpl  deploy.sh  dev.sh  dod.sh  install.bat  install.bat.tmpl  install_remote.ps1  install_remote.sh  pre_commit_review.py  start.bat  start.sh  stop.bat  stop.sh  upload_release.sh
