[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ppt-maker-backend"
version = "0.6.0"
description = "Backend for ai-ppt-maker — turn raw text/docs into premium .pptx via local Ollama."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.2",
    "Pillow>=10.3",
    "httpx>=0.27",
    # Pydantic v2 eval-type-checks `str | None` annotations at class-build
    # time. On Python 3.9 (our minimum) PEP 604 isn't natively evaluable, so
    # without this backport class definition raises ``TypeError: Unable to
    # evaluate type annotation 'str | None'``. Locally it slipped in via some
    # dev tool's transitive deps; CI hit it on a clean install.
    "eval_type_backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]
